--- a/src/app/components/cards.style.module.css
+++ b/src/app/components/cards.style.module.css
@@ -1,9 +1,8 @@
 .card{
-    margin-top: 30px;
     background-color: rgb(233, 233, 233);
     width: 350px;
     border-radius: 15px;
-    /* filter: drop-shadow(1px 1px 5px rgb(148, 124, 255)); */
+    cursor: pointer;
 }
 .content{
     padding: 20px;
