--- a/src/app/components/singledata.style.module.css
+++ b/src/app/components/singledata.style.module.css
@@ -1,4 +1,7 @@
 .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 50px;
     background: linear-gradient(118deg, rgba(236,235,255,1) 0%, rgba(68,99,190,1) 100%);
 }
@@ -36,4 +39,15 @@
 }
 .eventImg{
     filter: drop-shadow(1px 1px 6px rgb(65, 65, 65));
+}
+.schedule{
+    color: rgb(96, 63, 240);
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+
+}
+.modal{
+    width: fit-content;
+    margin-top: 100px;
 }
