--- a/src/app/components/multipledata.style.module.css
+++ b/src/app/components/multipledata.style.module.css
@@ -1,6 +1,8 @@
+
 .container{
     padding: 50px;
-    background-color:rgb(14, 14, 14) ;
+    /* background-color:rgb(14, 14, 14) ; */
+    background: linear-gradient(118deg, rgba(36,36,36,1) 0%, rgba(0,0,0,1) 100%);
 }
 .blur{
     height: 100vh;
@@ -20,6 +22,7 @@
     justify-items: center;
     row-gap: 30px;
 }
+
 .modal{
     position: absolute;
     left: 50%;
